# MLTama

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: main.py  requirements.txt
backend/lib/: client_data.py  fen.py  game.py  game_mover.py  init.py  logger.py  player.py
backend/lib/sio_server/: server.py  types.py
backend/lib/tama/: engine.py  fen.py  game.py  game_mover.py  helpers.py  iterative_descent.py  rules-libc.py  rules.py  rules_libc.py
backend/lib/tama/engines/: engine1.py  engine2.py  engine3.py  engine4.py
backend/lib/utils/: uuid.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx  socket.ts
frontend/src/components/: Board.tsx  GameInfo.tsx  Header.tsx
frontend/src/defaultContext/: getDefaultUserData.ts
frontend/src/hooks/: useSocket.tsx  useToast.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/styles/: GlobalStyles.tsx
frontend/src/types/: game.ts  general.ts  user.ts
frontend/src/utils/: formatConsoleLog.ts  helpers.ts  logger.ts  pieceImg.ts
frontend/src/utils/Graphics/: tama.ts
frontend/src/utils/Tama/: pieceImg.ts  tamaBoard.ts
libc/: CMakeLists.txt  library.c  rules.c  rules.h
